frontend/test/should_pass/nestedmodtestbase.grg
#using "nestedmod/nestednestedmod/nestedmodbase.gm"

rule bbase(c:Common)
{
	if( c.name == "foobar" );
	
	modify {
		delete(c);
	}
}
