frontend/test/should_fail/disallow_action_package_declaration_of_builtin_Time_package.grg
package Time
{
}

rule t
{
//	if { Time::now() != Time::now(); }
}
